fix: disable dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,12 +56,6 @@
   --font-fredericka: "FrederickatheGreat", cursive;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   
